<resources>
    <string name="app_name">Don\'t Forget</string>
    <string name="buttonAdd">Add</string>
    <string name="emptinessMessageTextCards">There is nothing to show!\nYou can add card with button below.</string>
    <string name="emptinessMessageTextAlarms">There is nothing to show!\nYou can add alarm with button below.</string>

    <string name="hintCaption">Caption</string>
    <string name="hintDescription">Description</string>

    <string name="hintAlarmCaption">What it would be?</string>
    <string name="hintAlarmLastDate">Last day it happened</string>
    <string name="hintAlarmNextDate">Next day it will happens</string>
    <string name="hintAlarmTime">At what time?</string>

    <string name="hintNextAlarm">Next alarm:</string>
</resources>
